close #180 edit ViewEnrollCourse.vue and KatalonEnrollCourse in Team21 Sprint 1.html and Team21 Sprint 2.html

--- a/testCase/2 Team21 Sprint 1.html
+++ b/testCase/2 Team21 Sprint 1.html
@@ -364,7 +364,47 @@
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">4.B6015695 AddEnrollCourse 1-ทดสอบถูกต้องและผ่าน</td></tr>
+<tr><td rowspan="1" colspan="3">4.B6015695 AddEnrollCourse 1-Failed</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//button[@id='showLogin']/span<datalist><option>//button[@id='showLogin']/span</option><option>//div[8]/button/span</option><option>css=#showLogin &gt; span.v-btn__content</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//button[@id='showloginAsEmp']/span<datalist><option>//button[@id='showloginAsEmp']/span</option><option>//div[2]/button/span</option><option>css=#showloginAsEmp &gt; span.v-btn__content</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td>ct001</td>
+</tr>
+<tr><td>click</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td>123</td>
+</tr>
+<tr><td>click</td><td>//button[@id='bin-login-emp']/span<datalist><option>//button[@id='bin-login-emp']/span</option><option>//div[3]/button/span</option><option>css=#bin-login-emp &gt; span.v-btn__content</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=SuccessEmp1<datalist><option>id=SuccessEmp1</option><option>//button[@id='SuccessEmp1']</option><option>//div[@id='app']/div/div/div/button</option><option>//button</option><option>css=#SuccessEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=enr00<datalist><option>id=enr00</option><option>//div[@id='enr00']</option><option>//div[@id='app']/div/nav/div/div/div[4]</option><option>//div[4]</option><option>css=#enr00</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=enroll001<datalist><option>//div[@id='app']/div[2]/main/div/div/div[2]/div/div/div/div/div/div/div/div/div/div</option><option>//div[2]/div/div/div/div/div/div/div/div/div/div</option><option>css=div.v-select__selections</option><option>id=enroll05672</option><option>id=enroll004543</option><option>id=enroll001</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[3]/div/div<datalist><option>id=วรวิทย์-แก้วกองกาด-list-item-453</option><option>//div[@id='วรวิทย์-แก้วกองกาด-list-item-453']</option><option>//div[@id='list-412']/div[3]/div/div</option><option>//div[3]/div/div</option><option>css=#วรวิทย์-แก้วกองกาด-list-item-453</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=enroll05672<datalist><option>//div[@id='app']/div[3]/main/div/div/div[2]/div/div/div/div[2]/div/div/div/div/div/div</option><option>//div/div/div/div[2]/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.primary--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option><option>id=enroll004543</option><option>id=enroll05672</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div/div/div/div/div/div/div/div<datalist><option>id=course-a-list-item-458</option><option>//div[@id='course-a-list-item-458']</option><option>xpath=(//div[@id='list-419']/div/div/div)[2]</option><option>//div/div/div/div/div/div/div/div</option><option>css=#course-a-list-item-458</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=enroll304<datalist><option>id=enroll304</option><option>//button[@id='enroll304']</option><option>//div[@id='app']/div[3]/main/div/div/div[2]/div/div/div/div[7]/button</option><option>//div[7]/button</option><option>css=#enroll304</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>id=enroll78501<datalist><option>id=enroll78501</option><option>//label[@id='enroll78501']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/label</option><option>//label</option><option>css=#enroll78501</option></datalist></td><td>Please select all information.</td>
+</tr>
+<tr><td>click</td><td>//button[@id='enroll0231']/span<datalist><option>//button[@id='enroll0231']/span</option><option>//div[2]/button/span</option><option>css=#enroll0231 &gt; span.v-btn__content</option></datalist></td><td></td>
+</tr>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">4.B6015695 AddEnrollCourse 2-Success</td></tr>
 </thead>
 <tbody>
 <tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
@@ -404,46 +444,6 @@
 <tr><td>assertText</td><td>id=enroll6701<datalist><option>id=enroll6701</option><option>//label[@id='enroll6701']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/label</option><option>//label</option><option>css=#enroll6701</option></datalist></td><td>OK !,Data has been saved successfully.</td>
 </tr>
 <tr><td>click</td><td>//button[@id='enroll1201']/span<datalist><option>//button[@id='enroll1201']/span</option><option>//div[2]/button/span</option><option>css=#enroll1201 &gt; span.v-btn__content</option></datalist></td><td></td>
-</tr>
-</tbody></table>
-<table cellpadding="1" cellspacing="1" border="1">
-<thead>
-<tr><td rowspan="1" colspan="3">4.B6015695 AddEnrollCourse 2-ทดสอบผิดพลาดและผ่าน</td></tr>
-</thead>
-<tbody>
-<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>//button[@id='showLogin']/span<datalist><option>//button[@id='showLogin']/span</option><option>//div[8]/button/span</option><option>css=#showLogin &gt; span.v-btn__content</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>//button[@id='showloginAsEmp']/span<datalist><option>//button[@id='showloginAsEmp']/span</option><option>//div[2]/button/span</option><option>css=#showloginAsEmp &gt; span.v-btn__content</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td></td>
-</tr>
-<tr><td>type</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td>ct001</td>
-</tr>
-<tr><td>click</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td></td>
-</tr>
-<tr><td>type</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td>123</td>
-</tr>
-<tr><td>click</td><td>//button[@id='bin-login-emp']/span<datalist><option>//button[@id='bin-login-emp']/span</option><option>//div[3]/button/span</option><option>css=#bin-login-emp &gt; span.v-btn__content</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=SuccessEmp1<datalist><option>id=SuccessEmp1</option><option>//button[@id='SuccessEmp1']</option><option>//div[@id='app']/div/div/div/button</option><option>//button</option><option>css=#SuccessEmp1</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=enr00<datalist><option>id=enr00</option><option>//div[@id='enr00']</option><option>//div[@id='app']/div/nav/div/div/div[4]</option><option>//div[4]</option><option>css=#enr00</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=enroll001<datalist><option>//div[@id='app']/div[2]/main/div/div/div[2]/div/div/div/div/div/div/div/div/div/div</option><option>//div[2]/div/div/div/div/div/div/div/div/div/div</option><option>css=div.v-select__selections</option><option>id=enroll05672</option><option>id=enroll004543</option><option>id=enroll001</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>//div[3]/div/div<datalist><option>id=วรวิทย์-แก้วกองกาด-list-item-453</option><option>//div[@id='วรวิทย์-แก้วกองกาด-list-item-453']</option><option>//div[@id='list-412']/div[3]/div/div</option><option>//div[3]/div/div</option><option>css=#วรวิทย์-แก้วกองกาด-list-item-453</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=enroll05672<datalist><option>//div[@id='app']/div[3]/main/div/div/div[2]/div/div/div/div[2]/div/div/div/div/div/div</option><option>//div/div/div/div[2]/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.primary--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option><option>id=enroll004543</option><option>id=enroll05672</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>//div/div/div/div/div/div/div/div<datalist><option>id=course-a-list-item-458</option><option>//div[@id='course-a-list-item-458']</option><option>xpath=(//div[@id='list-419']/div/div/div)[2]</option><option>//div/div/div/div/div/div/div/div</option><option>css=#course-a-list-item-458</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=enroll304<datalist><option>id=enroll304</option><option>//button[@id='enroll304']</option><option>//div[@id='app']/div[3]/main/div/div/div[2]/div/div/div/div[7]/button</option><option>//div[7]/button</option><option>css=#enroll304</option></datalist></td><td></td>
-</tr>
-<tr><td>assertText</td><td>id=enroll78501<datalist><option>id=enroll78501</option><option>//label[@id='enroll78501']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/label</option><option>//label</option><option>css=#enroll78501</option></datalist></td><td>Please select all information.</td>
-</tr>
-<tr><td>click</td><td>//button[@id='enroll0231']/span<datalist><option>//button[@id='enroll0231']/span</option><option>//div[2]/button/span</option><option>css=#enroll0231 &gt; span.v-btn__content</option></datalist></td><td></td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
