--- a/testCase/3 Team21 Sprint 2.html
+++ b/testCase/3 Team21 Sprint 2.html
@@ -150,7 +150,7 @@
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">5.B6015695 View EnrollCourse 1-ทดสอบถูกต้องเเละผ่าน</td></tr>
+<tr><td rowspan="1" colspan="3">5.B6015695 View EnrollCourse 1-Data Found</td></tr>
 </thead>
 <tbody>
 <tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
@@ -181,7 +181,7 @@
 </tr>
 <tr><td>click</td><td>id=search_enroll001<datalist><option>id=search_enroll001</option><option>//input[@id='search_enroll001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_enroll001</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=search_enroll001<datalist><option>id=search_enroll001</option><option>//input[@id='search_enroll001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_enroll001</option></datalist></td><td>อร</td>
+<tr><td>type</td><td>id=search_enroll001<datalist><option>id=search_enroll001</option><option>//input[@id='search_enroll001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_enroll001</option></datalist></td><td>วันชนะชัย</td>
 </tr>
 <tr><td>click</td><td>id=search_btn_enroll001<datalist><option>id=search_btn_enroll001</option><option>//i[@id='search_btn_enroll001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/button/span/i</option><option>//div/div/button/span/i</option><option>css=#search_btn_enroll001</option></datalist></td><td></td>
 </tr>
@@ -190,7 +190,7 @@
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">5.B6015695 View EnrollCourse 2-ทดสอบผิดพลาดเเละผ่าน</td></tr>
+<tr><td rowspan="1" colspan="3">5.B6015695 View EnrollCourse 2-Data Not Found</td></tr>
 </thead>
 <tbody>
 <tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
@@ -217,7 +217,7 @@
 </tr>
 <tr><td>click</td><td>id=search_enroll001<datalist><option>id=search_enroll001</option><option>//input[@id='search_enroll001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_enroll001</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=search_enroll001<datalist><option>id=search_enroll001</option><option>//input[@id='search_enroll001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_enroll001</option></datalist></td><td>ลีโอ</td>
+<tr><td>type</td><td>id=search_enroll001<datalist><option>id=search_enroll001</option><option>//input[@id='search_enroll001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_enroll001</option></datalist></td><td>ณัฐวัตร</td>
 </tr>
 <tr><td>click</td><td>id=search_btn_enroll001<datalist><option>id=search_btn_enroll001</option><option>//i[@id='search_btn_enroll001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/button/span/i</option><option>//div/div/button/span/i</option><option>css=#search_btn_enroll001</option></datalist></td><td></td>
 </tr>
