close #189 - เรียงลำดับ katalon ตามลำดับ

--- a/testCase/1 Team21 Sprint 2 View Failed..html
+++ b/testCase/1 Team21 Sprint 2 View Failed..html
@@ -8,61 +8,7 @@
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">B6010331 View RecordExpense Failed</td></tr>
-</thead>
-<tbody>
-<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=showLogin<datalist><option>id=showLogin</option><option>//button[@id='showLogin']</option><option>//div[@id='app']/div/header/div/div[8]/button</option><option>//div[8]/button</option><option>css=#showLogin</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=showloginAsEmp<datalist><option>id=showloginAsEmp</option><option>//button[@id='showloginAsEmp']</option><option>//div[@id='app']/div/div/div/div[2]/div[2]/button</option><option>//div[2]/button</option><option>css=#showloginAsEmp</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td></td>
-</tr>
-<tr><td>type</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td>mg001</td>
-</tr>
-<tr><td>click</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td></td>
-</tr>
-<tr><td>type</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td>123</td>
-</tr>
-<tr><td>click</td><td>id=bin-login-emp<datalist><option>id=bin-login-emp</option><option>//button[@id='bin-login-emp']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[3]/button</option><option>//div[3]/button</option><option>css=#bin-login-emp</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=SuccessEmp1<datalist><option>id=SuccessEmp1</option><option>//button[@id='SuccessEmp1']</option><option>//div[@id='app']/div/div/div/button</option><option>//button</option><option>css=#SuccessEmp1</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=virec00<datalist><option>id=virec00</option><option>//div[@id='virec00']</option><option>//div[@id='app']/div/nav/div/div/div[9]</option><option>//div[9]</option><option>css=#virec00</option></datalist></td><td></td>
-</tr>
-<tr><td>assertText</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label</option><option>//div[2]/div/div/div/div[3]/label</option><option>css=div.v-card__actions &gt; label</option></datalist></td><td>ไม่พบข้อมูล</td>
-</tr>
-</tbody></table>
-<table cellpadding="1" cellspacing="1" border="1">
-<thead>
-<tr><td rowspan="1" colspan="3">B6010768 View ReviewCourse failed.</td></tr>
-</thead>
-<tbody>
-<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=showLogin<datalist><option>id=showLogin</option><option>//button[@id='showLogin']</option><option>//div[@id='app']/div/header/div/div[8]/button</option><option>//div[8]/button</option><option>css=#showLogin</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=showloginAsEmp<datalist><option>id=showloginAsEmp</option><option>//button[@id='showloginAsEmp']</option><option>//div[@id='app']/div/div/div/div[2]/div[2]/button</option><option>//div[2]/button</option><option>css=#showloginAsEmp</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td></td>
-</tr>
-<tr><td>type</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td>ct001</td>
-</tr>
-<tr><td>type</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td>123</td>
-</tr>
-<tr><td>click</td><td>id=bin-login-emp<datalist><option>id=bin-login-emp</option><option>//button[@id='bin-login-emp']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[3]/button</option><option>//div[3]/button</option><option>css=#bin-login-emp</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=SuccessEmp1<datalist><option>id=SuccessEmp1</option><option>//button[@id='SuccessEmp1']</option><option>//div[@id='app']/div/div/div/button</option><option>//button</option><option>css=#SuccessEmp1</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>id=vireviews00<datalist><option>id=vireviews00</option><option>//div[@id='vireviews00']</option><option>//div[@id='app']/div/nav/div/div/div[8]</option><option>//div[8]</option><option>css=#vireviews00</option></datalist></td><td></td>
-</tr>
-<tr><td>assertText</td><td>//div[@id='table2']/div/table/tbody/tr/td<datalist><option>//div[@id='table2']/div/table/tbody/tr/td</option><option>//td</option><option>css=td</option></datalist></td><td>No data available</td>
-</tr>
-</tbody></table>
-<table cellpadding="1" cellspacing="1" border="1">
-<thead>
-<tr><td rowspan="1" colspan="3">B6014728 View Course failed.</td></tr>
+<tr><td rowspan="1" colspan="3">3.B6014728 View Course failed.</td></tr>
 </thead>
 <tbody>
 <tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
@@ -88,6 +34,60 @@
 <tr><td>click</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[2]/div/table/tbody/tr/td/h5<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[2]/div/table/tbody/tr/td/h5</option><option>//h5</option><option>css=h5</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[2]/div/table/tbody/tr/td/h5<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[2]/div/table/tbody/tr/td/h5</option><option>//h5</option><option>css=h5</option></datalist></td><td>ไม่พบข้อมูล</td>
+</tr>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">5.B6010768 View ReviewCourse failed.</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=showLogin<datalist><option>id=showLogin</option><option>//button[@id='showLogin']</option><option>//div[@id='app']/div/header/div/div[8]/button</option><option>//div[8]/button</option><option>css=#showLogin</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=showloginAsEmp<datalist><option>id=showloginAsEmp</option><option>//button[@id='showloginAsEmp']</option><option>//div[@id='app']/div/div/div/div[2]/div[2]/button</option><option>//div[2]/button</option><option>css=#showloginAsEmp</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td>ct001</td>
+</tr>
+<tr><td>type</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td>123</td>
+</tr>
+<tr><td>click</td><td>id=bin-login-emp<datalist><option>id=bin-login-emp</option><option>//button[@id='bin-login-emp']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[3]/button</option><option>//div[3]/button</option><option>css=#bin-login-emp</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=SuccessEmp1<datalist><option>id=SuccessEmp1</option><option>//button[@id='SuccessEmp1']</option><option>//div[@id='app']/div/div/div/button</option><option>//button</option><option>css=#SuccessEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=vireviews00<datalist><option>id=vireviews00</option><option>//div[@id='vireviews00']</option><option>//div[@id='app']/div/nav/div/div/div[8]</option><option>//div[8]</option><option>css=#vireviews00</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='table2']/div/table/tbody/tr/td<datalist><option>//div[@id='table2']/div/table/tbody/tr/td</option><option>//td</option><option>css=td</option></datalist></td><td>No data available</td>
+</tr>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">6.B6010331 View RecordExpense Failed</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=showLogin<datalist><option>id=showLogin</option><option>//button[@id='showLogin']</option><option>//div[@id='app']/div/header/div/div[8]/button</option><option>//div[8]/button</option><option>css=#showLogin</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=showloginAsEmp<datalist><option>id=showloginAsEmp</option><option>//button[@id='showloginAsEmp']</option><option>//div[@id='app']/div/div/div/div[2]/div[2]/button</option><option>//div[2]/button</option><option>css=#showloginAsEmp</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td>mg001</td>
+</tr>
+<tr><td>click</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td>123</td>
+</tr>
+<tr><td>click</td><td>id=bin-login-emp<datalist><option>id=bin-login-emp</option><option>//button[@id='bin-login-emp']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[3]/button</option><option>//div[3]/button</option><option>css=#bin-login-emp</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=SuccessEmp1<datalist><option>id=SuccessEmp1</option><option>//button[@id='SuccessEmp1']</option><option>//div[@id='app']/div/div/div/button</option><option>//button</option><option>css=#SuccessEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=virec00<datalist><option>id=virec00</option><option>//div[@id='virec00']</option><option>//div[@id='app']/div/nav/div/div/div[9]</option><option>//div[9]</option><option>css=#virec00</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label</option><option>//div[2]/div/div/div/div[3]/label</option><option>css=div.v-card__actions &gt; label</option></datalist></td><td>ไม่พบข้อมูล</td>
 </tr>
 </tbody></table>
 </body>
